Closed
Bug 1374625
Opened 8 years ago
Closed 8 years ago
Protect ruby from crash because of failing to build text run
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla56
People
(Reporter: xidorn, Assigned: xidorn)
References
(Blocks 1 open bug)
Details
Crash Data
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
jfkthame
:
review+
jcristau
:
approval-mozilla-beta+
gchang
:
approval-mozilla-release-
gchang
:
approval-mozilla-esr52-
|
Details |
Most callsites of nsTextFrame::GetTextRun already have null check. We should add such check for ruby as well, because EnsureTextRun may fail in some cases (although we don't want it to ever fail).
Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
mozreview-review |
Comment on attachment 8879538 [details]
Bug 1374625 - Null-check result from GetTextRun in nsRubyBaseContainerFrame.
https://reviewboard.mozilla.org/r/150830/#review155618
Attachment #8879538 -
Flags: review?(jfkthame) → review+
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/72a0af4b7041
Null-check result from GetTextRun in nsRubyBaseContainerFrame. r=jfkthame
Updated•8 years ago
|
status-firefox54:
--- → affected
status-firefox55:
--- → affected
status-firefox56:
--- → affected
status-firefox-esr52:
--- → affected
Comment 4•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Assignee | ||
Comment 5•8 years ago
|
||
Comment on attachment 8879538 [details]
Bug 1374625 - Null-check result from GetTextRun in nsRubyBaseContainerFrame.
Approval Request Comment
[Feature/Bug causing the regression]: bug 1081858
[User impact if declined]: May crash in some pages before we fix every cases of bug 1373586.
[Is this code covered by automated tests?]: No, because the added branch is just to improve robustness, and it is not supposed to happen at all.
[Has the fix been verified in Nightly?]: Just landed.
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: No.
[Is the change risky?]: Not risky at all.
[Why is the change risky/not risky?]: It just adds a null-check which would crash otherwise.
[String changes made/needed]: n/a
[Approval Request Comment]
If this is not a sec:{high,crit} bug, please state case for ESR consideration:
User impact if declined: May crash in some pages before we fix every cases of bug 1373586.
Fix Landed on Version: 56
Risk to taking this patch (and alternatives if risky): Not risky.
String or UUID changes made by this patch: n/a
See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info.
Attachment #8879538 -
Flags: approval-mozilla-release?
Attachment #8879538 -
Flags: approval-mozilla-esr52?
Attachment #8879538 -
Flags: approval-mozilla-beta?
Comment 6•8 years ago
|
||
Comment on attachment 8879538 [details]
Bug 1374625 - Null-check result from GetTextRun in nsRubyBaseContainerFrame.
null ptr check, beta55+
Attachment #8879538 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•8 years ago
|
||
bugherder uplift |
Comment 8•8 years ago
|
||
Based on comment 5, this does not manual coverage.
Updating the qe‑verify flag to reflect this.
Flags: qe-verify-
Comment 9•8 years ago
|
||
Comment on attachment 8879538 [details]
Bug 1374625 - Null-check result from GetTextRun in nsRubyBaseContainerFrame.
There is no signature associate with this. We can't tell how severe it is for users. Release54-.
Attachment #8879538 -
Flags: approval-mozilla-release? → approval-mozilla-release-
Updated•8 years ago
|
Comment 10•8 years ago
|
||
Comment on attachment 8879538 [details]
Bug 1374625 - Null-check result from GetTextRun in nsRubyBaseContainerFrame.
The same as comment #9. ESR52-.
Attachment #8879538 -
Flags: approval-mozilla-esr52? → approval-mozilla-esr52-
Updated•8 years ago
|
Assignee | ||
Comment 11•8 years ago
|
||
Signature is the same as bug 1373586.
Crash Signature: [@ LineBreakBefore]
Comment 13•8 years ago
|
||
The volume of crashes in ESR52 is very low. It seems not a critical issue.
Flags: needinfo?(gchang)
You need to log in
before you can comment on or make changes to this bug.
Description
•