Bug 1374625 - Null-check result from GetTextRun in nsRubyBaseContainerFrame. r=jfkthame, a=jcristau

MozReview-Commit-ID: CfXYCJ7wpj